[tool.poetry]
name = "unhcr-sites"
version = "0.1.0"
description = ""
authors = ["belisards <adrianobf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
